# parse-rs

./: .dockerignore  .env  .gitignore  Cargo.toml  LICENSE  PARSE-RS.md  README.md  docker-compose.yml
.github/workflows/: validate-pr.yml
.windsurf/rules/: api-sync.md
docker/parse-server/: Dockerfile  create-admin.js  entrypoint.sh  test-connection.js
docker/parse-server/cloud/: main.js
src/: acl.rs  analytics.rs  client.rs  cloud.rs  config.rs  error.rs  file.rs  geopoint.rs  installation.rs  lib.rs  object.rs  query.rs  relations.rs  requests.rs  role.rs  roles.rs  schema.rs  session.rs  user.rs
src/types/: common.rs  date.rs  mod.rs
tests/: acl_integration.rs  analytics_integration.rs  auth_integration.rs  cloud_integration.rs  config_integration.rs  file_integration.rs  installation_integration.rs  installation_query_integration.rs  integration_tests.rs  object_field_ops_integration.rs  object_integration.rs  query_advanced_ops_integration.rs  query_aggregate_ops_integration.rs  query_array_ops_integration.rs  query_basic_ops_integration.rs  query_comparison_ops_integration.rs  query_equality_ops_integration.rs  query_relational_ops_integration.rs  query_test_utils.rs  relation_integration.rs  role_integration.rs  schema_integration_tests.rs  session_integration_tests.rs
