[package]
name = "parse-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
url = "2.5"

[dev-dependencies]
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
dotenvy = "0.15"
