[package]
name = "parse-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
url = "2.5.0"
urlencoding = "2.1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

[features]
default = []

[dev-dependencies]
uuid = { version = "1.7.0", features = ["v4", "serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
